--- a/app/views/posts/featured.html.erb
+++ b/app/views/posts/featured.html.erb
@@ -1,15 +1,15 @@
 <h1>Featured</h1>
 <hr/>
 
-<div class="col-md-12">
+<div class="col-md-12m row">
 
 <% @posts.each do |post| %>
-	<div class="col-md-4">
+	<div class="col-md-4 clearfix">
 	<div class="thumbnail">
       <%= link_to image_tag(post.image.url(:large)), post_path(post) %>
       <div class="caption">
         <h3>
-        <%= link_to post.title, post %><br/>
+        <%= link_to truncate(post.title, :length => 20 ), post %><br/>
         <small>
         via <%= post.user.profile.display_name %>
         </small>
@@ -20,8 +20,10 @@
   <% end %>
   <br/>
   <br/></div>
-        <p><a href="<%= post_path(post) %>" class="btn btn-primary" role="button">View</a> 
-        <!-- <a href="#" class="btn btn-default" role="button">view</a></p> -->
+        <p class=""><a href="<%= post_path(post) %>" class="btn btn-primary " role="button">View</a> 
+        
+        <!-- <a href="#" class="btn btn-default" role="button">view</a> -->
+        </p>
       </div>
     </div>
 
