--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,61 +14,29 @@
 <hr/>
 
 <div class="col-md-12">
-<div class="col-md-8">
-    <% @posts.each do |post| %>
-            <div class=" clearfix">
-        <%= link_to image_tag(post.image.url(:thumbnail), :class => "pull-left thumbnail"), post %>
+<div class="col-md-8 row">
+   <%= render 'shared/posts', :posts => @posts %>
 
-        <h3> &nbsp;<%= link_to post.title, post %>
-        <br/>
-        <small>&nbsp; via <%= link_to post.user.profile.display_name, profile_path(post.user.profile) %></small>
-        </h3>
-        &nbsp;
-
-        <label class="label label-success">
-           <i class="glyphicon glyphicon-play"></i> 
-           <%= pluralize(post.plays.to_i, 'play') %>
-       </label>
-      &nbsp;
-        <% post.tag_list.each do |tag| %>
-      <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
-      <%= link_to tag, tag_path(tag) %></label>
-  <% end %>
-        <% if user_signed_in? %>
-            <% if current_user.try(:admin?) %>
-            <span class="pull-right">
-               &nbsp; <%= link_to 'Edit', edit_post_path(post), :class => "btn btn-xs btn-default" %>
-            </span>
-            <span class="pull-right"> <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' },  :class => "btn btn-xs btn-danger" %>
-            </span>
-            <% end %>
-        <% end %>
-</div>
-      <hr>
-    <% end %>
 </div>
 <div class="col-md-4">
     <div class="panel panel-primary">
-  <div class="panel-heading">
-    <h3 class="panel-title"><%= link_to 'Featured', featured_path %> </h3>
-  </div>
-  <div class="panel-body">
-    <% @posts.where(:featured => true ).each do |post| %>
-      <%= link_to   image_tag(post.image.url(:thin), :class => "img-responsive"), post_path(post) %>
-    <% end %>
-  </div>
-  </div>  
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= link_to 'Featured', featured_path %> </h3>
+      </div>
+      <div class="panel-body">
+        <% @posts.where(:featured => true ).each do |post| %>
+          <%= link_to   image_tag(post.image.url(:thin), :class => "img-responsive"), post_path(post) %>
+        <% end %>
+      </div>
+    </div>  
     <div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Sponsored by</h3>
-  </div>
-  <div class="panel-body">
-    <%= image_tag("https://placekitten.com/g/300/250") %>
-  </div>
-</div>
-
-
-
+      <div class="panel-heading">
+        <h3 class="panel-title">Sponsored by</h3>
+      </div>
+      <div class="panel-body">
+        <%= image_tag("https://placekitten.com/g/300/250") %>
+      </div>
+    </div>
 </div>
 
 </div>
