--- a/app/views/posts/tag.html.erb
+++ b/app/views/posts/tag.html.erb
@@ -2,32 +2,6 @@
  Tagged: <%= @tag %>
 </h1>
 <hr/>
-    <% @posts.each do |post| %>
-        <div class=" clearfix">
-               <%= link_to image_tag(post.image.url(:thumbnail), :class => "pull-left thumbnail"), post %>
-
-        <h3> &nbsp;<%= link_to post.title, post %>
-        <br/>
-        <small>&nbsp; by <%= link_to post.user.profile.display_name, profile_path(post.user.profile) %></small>
-        </h3>
-        &nbsp;
-
-        <label class="label label-success">
-
-     <i class="glyphicon glyphicon-play"></i> 
-
-     <%= pluralize(post.plays.to_i, 'play') %>
-
-     </label>
-      &nbsp;
-        <% post.tag_list.each do |tag| %>
-      <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
-      <%= link_to tag, tag_path(tag) %></label>
-  <% end %>
-  </div>
-  <hr>
-
-    <% end %>
-
+    <%= render 'shared/posts', :posts => @posts %>
 
 
