--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -24,45 +24,15 @@
   <%= @profile.bio %>
 </p>
 
-<%= link_to 'Edit', edit_profile_path(@profile), class: "btn btn-sm btn-default pull-right" %>
-
+<% if user_signed_in? %>
+  <% if current_user.try(:admin?) || current_user == @profile.user %>
+    <%= link_to 'Edit', edit_profile_path(@profile), class: "btn btn-sm btn-default pull-right" %>
+  <% end %>
+<% end %>
 <br/>
 <hr/>
 
-<% @posts.each do |post| %>
-<div class="row">
-    <%= link_to image_tag(post.image.url(:thumbnail), :class => "pull-left thumbnail"), post %>
-
-        <h2> &nbsp;<%= link_to post.title, post %>
-        <br/>
-
-        </h2>
-             &nbsp;
-
-        <label class="label label-success">
-           <i class="glyphicon glyphicon-play"></i> 
-           <%= pluralize(post.plays.to_i, 'play') %>
-       </label>
-      &nbsp;
-        <% post.tag_list.each do |tag| %>
-      <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
-      <%= link_to tag, tag_path(tag) %></label>
-  <% end %>
-  <br/>
-
-        <% if user_signed_in? %>
-            <% if current_user.try(:admin?) %>
-            &nbsp; <span class="pull-right">
-                 &nbsp; <%= link_to 'Edit', edit_post_path(post) %>
-            </span>
-            <span class="pull-right"><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
-            </span>
-            <% end %>
-        <% end %>
-        </div>
-
-      <hr/>
-<% end %>
+<%= render 'shared/posts', :posts => @posts %>
 </div>
 
 
