--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,5 +1,5 @@
 <%# add navigation links to this file %>
-<li><%= link_to raw(' <i class="glyphicon glyphicon-cloud-upload" ></i> Upload'), new_post_path %></li>
+<li><%= link_to raw(' <i class="glyphicon glyphicon-cloud-upload" ></i> Submit'), submit_path %></li>
 <li><%= link_to raw(' <i class="glyphicon glyphicon-star" ></i> Featured'), featured_path %></li>
 <% if user_signed_in? %>
 	<li class="dropdown pull-right">
